# pm-inspect

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: wallets.example.txt
src/: __init__.py  __main__.py  cli.py  constants.py  metrics.py  monitor.py  service_runtime.py  template_listener.py
src/api/: polygon.py
src/core/: abi.py  block_processor.py  decoder.py  models.py  wallet_filter.py
src/events/: __init__.py  redis_pubsub.py  trade_events.py
src/pubsub/: __init__.py  schema_loader.py  topics.py  validator.py
src/pubsub/schemas/polymarket/trade/v1.0.0/: schema.json
src/pubsub/schemas/polymarket/trade/v2.0.0/: schema.json
src/utils/: logging.py
tests/: __init__.py  test_block_processor.py  test_cli_help.py  test_cli_runtime.py  test_redis_pubsub.py  test_trade_events.py  test_wallet_filter.py
tests/api/: test_polygon.py
tests/cli/: test_help.py  test_runtime.py
tests/core/: test_block_processor.py  test_decoder.py  test_monitor.py  test_wallet_filter.py
tests/events/: test_redis_pubsub.py  test_trade_events.py
tests/metrics/: __init__.py  test_service_metrics.py
tests/monitor/: __init__.py  test_trade_monitor.py
tests/pubsub/: __init__.py  test_pubsub_schema.py
